49: Change package name
Task-Url: https://github.com/unitsofmeasurement/uom-demos/issues/49